--- a/Carisbrook/Views/Home/MenuSection.cshtml
+++ b/Carisbrook/Views/Home/MenuSection.cshtml
@@ -4,7 +4,7 @@
     </li>
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            Our School
+            About US
             <span class="caret"></span>
         </a>
 
@@ -13,63 +13,93 @@
                 <a href="@Url.Action("OurSchool", "Home",new {id=1 })">Principals Message</a>
             </li>
             <li>
-                <a href="@Url.Action("OurSchool", "Home",new {id=2  })">Photo Tour</a>
+                <a href="@Url.Action("OurSchool", "Home",new {id=2  })">School Staff</a>
             </li>
             <li>
-                <a href="@Url.Action("OurSchool", "Home",new {id=3  })">Property </a>
+                <a href="@Url.Action("OurSchool", "Home",new {id=3  })">Board Of Trust</a>
             </li>
             <li>
-                <a href="@Url.Action("OurSchool", "Home",new {id=4  })">School Care </a>
+                <a href="@Url.Action("OurSchool", "Home",new {id=4  })">Friend Of School </a>
+            </li>
+            <li>
+                <a href="@Url.Action("OurSchool", "Home",new {id=5  })">KidsCan </a>
             </li>
         </ul>
     </li>
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            Learning
+            Our Shool
             <span class="caret"></span>
         </a>
 
         <ul class="dropdown-menu" role="menu">
             <li>
-                <a href="@Url.Action("OurSchool", "Home",new {id= 9})">Sports</a>
+                <a href="@Url.Action("OurSchool", "Home",new {id= 6})">Learning Programme 2018</a>
             </li>
             <li>
-                <a href="@Url.Action("OurSchool", "Home",new {id=5 })">Culture</a>
+                <a href="@Url.Action("OurSchool", "Home",new {id=7 })">Achivements</a>
             </li>
             <li>
-                <a href="@Url.Action("OurSchool", "Home",new {id=6 })">Learning 2018</a>
+                <a href="@Url.Action("OurSchool", "Home",new {id=9 })">School Care</a>
+            </li>
+            <li>
+                <a href="@Url.Action("OurSchool", "Home",new {id=10 })">Property</a>
             </li>
         </ul>
     </li>
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            Our People
+            CurriCulumn
             <span class="caret"></span>
         </a>
 
         <ul class="dropdown-menu" role="menu">
             <li>
-                <a href="@Url.Action("OurSchool", "Home",new {id=6 })">School Staff</a>
+                <a href="@Url.Action("OurSchool", "Home",new {id=11 })">Sports</a>
             </li>
             <li>
-                <a href="@Url.Action("OurSchool", "Home",new {id=7 })">Board of Trust</a>
+                <a href="@Url.Action("OurSchool", "Home",new {id=12 })">Arts</a>
             </li>
             <li>
-                <a href="@Url.Action("OurSchool", "Home",new {id=8 })">Friend Of School</a>
+                <a href="@Url.Action("OurSchool", "Home",new {id=13 })">Camps</a>
+            </li>
+            <li>
+                <a href="@Url.Action("OurSchool", "Home",new {id=14 })">Extra Activities</a>
+            </li>
+        </ul>
+    </li>
+    <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            General Info
+            <span class="caret"></span>
+        </a>
+
+        <ul class="dropdown-menu" role="menu">
+            <li>
+                <a href="@Url.Action("OurSchool", "Home",new {id=15 })">Enrollment</a>
+            </li>
+            <li>
+                <a href="@Url.Action("OurSchool", "Home",new {id=16 })">Newsletter</a>
+            </li>
+            <li>
+                <a href="@Url.Action("OurSchool", "Home",new {id=17 })">Extra Facilities</a>
+            </li>
+            <li>
+                <a href="@Url.Action("OurSchool", "Home",new {id=18 })">Parents Corner</a>
+            </li>
+            <li>
+                <a href="@Url.Action("OurSchool", "Home",new {id=19 })">Classes</a>
+            </li>
+            <li>
+                <a href="@Url.Action("OurSchool", "Home",new {id=20 })">Canteen Menu</a>
             </li>
         </ul>
     </li>
     <li>
-        <a href="@Url.Action("OurSchool", "Home",new {id=16 })" class="effect-3">Newsletter</a>
+        <a href="@Url.Action("OurSchool", "Home",new {id=21 })" class="effect-3">Gallery</a>
     </li>
     <li>
-        <a href="@Url.Action("OurSchool", "Home",new {id=17 })" class="effect-3">Information</a>
-    </li>
-    <li>
-        <a href="@Url.Action("OurSchool", "Home",new {id=19 })" class="effect-3">Gallery</a>
-    </li>
-    <li>
-        <a href="@Url.Action("OurSchool", "Home",new {id= 18})" class="effect-3">Contact Us</a>
+        <a href="@Url.Action("OurSchool", "Home",new {id= 22})" class="effect-3">Contact Us</a>
     </li>
 
 </ul>
