--- a/Carisbrook/Assets/css/style.css
+++ b/Carisbrook/Assets/css/style.css
@@ -67,7 +67,7 @@ label {
 /*-- header --*/
 
 .header-top {
-    background: #37BF91;
+    background: url(../images/Border.png);
     padding: 8px 0;
 }
 
@@ -152,7 +152,7 @@ label {
 .navbar-nav {
     float: right;
     margin: 0;
-    width: 60%;
+    width: 80%;
 }
 
 .navbar {
@@ -184,7 +184,7 @@ label {
 }
 
 .navbar-default a.navbar-brand h1 span {
-    color: #EF5861;
+    color: #005596 ;
     margin-right: 5px;
 }
 
@@ -216,14 +216,14 @@ label {
 
 .navbar-default .navbar-nav>li>a:hover,
 .navbar-default .navbar-nav>li>a.active {
-    color: #EF5861;
+    color: #005596 ;
 }
 
 .navbar-default .navbar-nav>.open>a,
 .navbar-default .navbar-nav>.open>a:hover,
 .navbar-default .navbar-nav>.open>a:focus {
     background-color: transparent;
-    color: #EF5861;
+    color: #005596 ;
 }
 
 .navbar-default .navbar-toggle:hover,
@@ -260,7 +260,7 @@ label {
 .navbar-default .navbar-nav>.active>a,
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
-    color: #EF5861;
+    color: #005596 ;
     background: none;
 }
 
@@ -300,7 +300,7 @@ label {
 .dropdown-menu>.active>a,
 .dropdown-menu>.active>a:hover,
 .dropdown-menu>.active>a:focus {
-    color: #EF5861;
+    color: #005596 ;
     background-color: #fff;
 }
 
@@ -344,7 +344,7 @@ label {
 /*-- banner --*/
 
 .carousel .item {
-    background: url(../images/1.jpg) no-repeat center;
+    background: url(../images/Slider.jpg) no-repeat center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -353,7 +353,7 @@ label {
 }
 
 .carousel .item.item2 {
-    background: url(../images/2.jpg) no-repeat center;
+    background: url(../images/Slider1.jpg) no-repeat center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -362,7 +362,7 @@ label {
 }
 
 .carousel .item.item3 {
-    background: url(../images/3.jpg) no-repeat center;
+    background: url(../images/Slider2.jpg) no-repeat center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -371,7 +371,7 @@ label {
 }
 
 .carousel .item.item4 {
-    background: url(../images/4.jpg) no-repeat center;
+    background: url(../images/Slider3.jpg) no-repeat center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -388,7 +388,7 @@ label {
 
 .carousel-caption h2 span,
 .carousel-caption h3 span {
-    color: #ef5861;
+    color: #005596 ;
 }
 
 .carousel-caption {
@@ -445,7 +445,7 @@ h3.tittle {
 }
 
 h3.tittle span {
-    color: #ef5861;
+    color: #005596 ;
 }
 
 .tittle-style {
@@ -464,7 +464,7 @@ h3.tittle span {
 
 .tittle-style:after {
     content: "";
-    background: #ef5861;
+    background: #005596 ;
     width: 3%;
     height: 5px;
     position: absolute;
@@ -502,7 +502,7 @@ h3.tittle span {
 
 .banner_bottom_left p:nth-child(3) {
     margin-bottom: 0;
-    border-top: 2px solid #ef5861;
+    border-top: 2px solid #005596 ;
     padding-top: 13px;
 }
 
@@ -583,7 +583,7 @@ h3.tittle span {
 }
 
 .services {
-    background: #ef5861;
+    background: #005596 ;
     text-align: center;
     margin-top: -7em;
 }
@@ -819,7 +819,7 @@ h3.tittle span {
 
 .three_testimonials_grid1 h5 {
     font-size: 24px;
-    color: #ef5861;
+    color: #005596 ;
     letter-spacing: 1px;
 }
 
@@ -941,7 +941,7 @@ h3.tittle span {
 }
 
 .middle-sec-agile h4 span {
-    color: #ef5861;
+    color: #005596 ;
 }
 
 .middle-sec-agile ul li {
@@ -962,7 +962,7 @@ h3.tittle span {
 }
 
 .midle-left-w3l span {
-    color: #ef5861;
+    color: #005596 ;
     font-size: 26px;
 }
 
@@ -995,7 +995,7 @@ a.button-style {
 }
 
 a.button-style:hover {
-    background: #ef5861;
+    background: #005596 ;
     transition: 0.5s all;
     -webkit-transition: 0.5s all;
     -o-transition: 0.5s all;
@@ -1037,7 +1037,7 @@ a.button-style:hover {
 
 .mkls_footer_grid_left p a {
     text-decoration: none;
-    color: #ef5861;
+    color: #005596 ;
 }
 
 .mkls_footer_grid_left p a:hover {
@@ -1087,7 +1087,7 @@ a.button-style:hover {
 
 .footer-copy-right {
     padding: 1em 0;
-    background: rgba(0, 0, 0, 0.72);
+    background: url(../images/Border.png);
 }
 
 .footer-copy-right p {
@@ -1244,7 +1244,7 @@ ul.short_ls li {
 }
 
 ul.short_ls li a {
-    color: #EF5861;
+    color: #005596 ;
     text-decoration: none;
 }
 
@@ -1407,7 +1407,7 @@ li.aitsaitsresumewthreeli-1 {
 }
 
 .social-lsicon a:hover {
-    color: #ef5861;
+    color: #005596 ;
     transition: 0.5s all;
     -webkit-transition: 0.5s all;
     -moz-transition: 0.5s all;
@@ -1430,7 +1430,7 @@ li.aitsaitsresumewthreeli-1 {
 }
 
 .blog-grid-text h4 {
-    color: #ef5861;
+    color: #005596 ;
     font-size: 30px;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -1504,7 +1504,7 @@ label.header {
 }
 
 .register-form input[type="submit"]:hover {
-    background: #ef5861;
+    background: #005596 ;
     -webkit-transition: 0.5s all;
     -moz-transition: 0.5s all;
     -o-transition: 0.5s all;
@@ -1553,7 +1553,7 @@ label.header {
 }
 
 .agile-figcaption:hover {
-    background: #ef5861;
+    background: #005596 ;
     -webkit-transition: .5s all;
     -moz-transition: .5s all;
     transition: .5s all;
@@ -1600,7 +1600,7 @@ label.header {
 }
 
 .contact-text1 p {
-    border-bottom: 2px solid #ef5861;
+    border-bottom: 2px solid #005596 ;
     padding-bottom: 25px;
 }
 
@@ -1849,7 +1849,7 @@ input[type="checkbox"] {
 .login-form input[type="submit"] {
     font-size: 16px;
     color: #fff;
-    background: #ef5861;
+    background: #005596 ;
     border: none;
     outline: none;
     cursor: pointer;
@@ -1894,7 +1894,7 @@ input[type="checkbox"] {
 }
 
 .login-agileits-bottom h6 a:hover {
-    color: #ef5861;
+    color: #005596 ;
     -webkit-transition: 0.5s all;
     -moz-transition: 0.5s all;
     -o-transition: 0.5s all;
@@ -1919,7 +1919,7 @@ input[type="checkbox"] {
 }
 
 .register-forming p a:hover {
-    color: #ef5861;
+    color: #005596 ;
     -webkit-transition: 0.5s all;
     -moz-transition: 0.5s all;
     -o-transition: 0.5s all;
@@ -3097,7 +3097,7 @@ h3.title-w3l.w3l-2:before {
         background-color: transparent;
     }
     .navbar-default .navbar-toggle .icon-bar {
-        background-color: #EF5861;
+        background-color: #005596 ;
     }
     .navbar-default .navbar-toggle {
         margin: 7px 20px;
@@ -3122,7 +3122,7 @@ h3.title-w3l.w3l-2:before {
         color: #fff;
     }
     .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-        color: #EF5861;
+        color: #005596 ;
     }
 }
 
@@ -3971,7 +3971,12 @@ h3.title-w3l.w3l-2:before {
     .contact-w3lsright iframe {
         min-height: 276px;
     }
+    
 }
 
 
 /*--//responsive--*/
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+    color: #fff;
+    background-color: #005596;
+}
