--- a/Carisbrook/Views/Shared/_Layout.cshtml
+++ b/Carisbrook/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG,
                     </a>
                 </div>
                 <div class="header-top-righ">
-                    <a href="login.html">
+                    <a href="#">
                         <span class="fa fa-sign-out" aria-hidden="true"></span>Login
                     </a>
                 </div>
@@ -84,10 +84,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG,
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html">
+                        <a class="navbar-brand" href="#">
                             <h1>
-                                <span class="fa fa-leanpub" aria-hidden="true"></span>Best Study
-                                <label>Education </label>
+                                <img src="~/Assets/images/Logo.png" alt="" />  <img src="~/Assets/images/Logo_tag.png" alt="" />
+                                
                             </h1>
                         </a>
                     </div>
