--- a/Carisbrook/Views/Shared/_Layout.cshtml
+++ b/Carisbrook/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG,
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="@Url.Action("Index", "Home")">
                             <h1>
                                 <img src="~/Assets/images/Logo.png" alt="" />  <img src="~/Assets/images/Logo_tag.png" alt="" />
                                 
