--- a/Carisbrook/Views/Home/Index.cshtml
+++ b/Carisbrook/Views/Home/Index.cshtml
@@ -76,7 +76,14 @@
                 <span>W</span>elcome
             </h3>
             <div class="tittle-style">
-
+                <div class="container">
+                    <div class="row">
+                        <div class="alert alert-warning alert-dismissible" role="alert">
+                            <button type="button" onclick="this.parentNode.parentNode.removeChild(this.parentNode);" class="close" data-dismiss="alert"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+                            <strong><i class="fa fa-warning"></i> Danger!</strong> <marquee><p style="font-family: Impact; font-size: 18pt">Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor!</p></marquee>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="welcome-sub-wthree">
