--- a/Carisbrook/Views/Home/Index.cshtml
+++ b/Carisbrook/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 <!-- banner -->
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -98,26 +99,46 @@
             </div>
             <!-- Stats-->
             <div class="col-md-6 stats-info-agile">
-                <marquee> hello</marquee>
-                @* <div class="col-xs-6 stats-grid stat-border">
-                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='768' data-delay='.5' data-increment="1">768</div>
-                <p>Faculties</p>
-            </div>
-            <div class="col-xs-6 stats-grid">
-                <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='678' data-delay='.5' data-increment="1">678</div>
-                <p>Approved Courses</p>
-            </div>
-            <div class="clearfix"></div>
-            <div class="child-stat">
-                <div class="col-xs-6 stats-grid stat-border border-st2">
-                    <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='800' data-delay='.5' data-increment="1">800</div>
-                    <p>Certified Teachers</p>
+                <h2 style="color:White;"><u>Latest News</u></h2>
+                <div style="padding:5px;  height:auto; width:95%; margin-top:70px; margin-bottom:20px;">
+                    <marquee direction="up" scrollamount="3" scrolldelay="60" onmouseover="stop()" onmouseout="start()" style="padding:5px; height:500px;">
+                        <p>
+                              Last day term 1 - 12th April
+                        </p><br />
+
+                        <p>                        
+                               First day term 2 - 29th April
+                        </p><br /><br />
+
+                        <p>
+                            
+                            Singapour Culture Exchange 2019 has From 25th April - 2nd May
+                        </p><br />
+
+                        <p>
+                           
+                                Royal NZ Navy band 2pm-2:45pm On 27th May
+                        </p><br />
+
+                            <h4 style="color:White;">
+                                <span class="fa fa-hand-o-right" aria-hidden="true" style="color:black"></span>
+                                <u>Carisbrook School Holiday Programme</u>
+                            </h4><br />
+                        <p>                            
+                               Enrolment Forms are now available from Anna at After School Care or Kellie in the office
+                        </p><br />                         
+                        <p> Holiday Programme hours at 800am to 5:30pm </p><br />
+
+                            <h4 style="color:White;">
+                                <span class="fa fa-hand-o-right" aria-hidden="true" style="color:black"></span>
+                                <u>Year 7 Vision Screening</u>
+                            </h4>
+                        <p>                     
+                              The Vision Hearing Technicians from Population Health Southern Distric Health will be visiting your school to school all year seven students for distance vision
+                        </p><br /><br />
+                    </marquee>
                 </div>
-                <div class="col-xs-6 stats-grid">
-                    <div class='numscroller numscroller-big-bottom' data-slno='1' data-min='0' data-max='485' data-delay='.5' data-increment="1">485</div>
-                    <p>Happy Students</p>
-                 </div>*@
-                <div class="clearfix"></div>
+               <div class="clearfix"></div>
             </div>
         </div>
             <!-- //Stats -->
@@ -141,15 +162,15 @@
         <div class="services-moksrow">
             <div class="col-xs-4 services-grids-w3l">
                 <div class="servi-shadow">
-                    <span class="fa fa-bullhorn icon" aria-hidden="true"></span>
-                    <h4>Popular Courses</h4>
+                    <span class="fa fa-users icon" aria-hidden="true"></span>
+                    <h4>Best Teachers</h4>
                     <p>Phasellus at placerat ante nulla adipiscing elit</p>
                 </div>
             </div>
             <div class="col-xs-4 services-grids-w3l">
                 <div class="servi-shadow">
-                    <span class="fa fa-certificate icon" aria-hidden="true"></span>
-                    <h4>Certification</h4>
+                    <span class="fa fa-laptop icon " aria-hidden="true"></span>
+                    <h4>Excellent Lab</h4>
                     <p>Phasellus at placerat ante nulla adipiscing elit</p>
                 </div>
             </div>
@@ -165,8 +186,8 @@
         <div class="services-moksrow">
             <div class="col-xs-4 services-grids-w3l">
                 <div class="servi-shadow">
-                    <span class="fa fa-users icon" aria-hidden="true"></span>
-                    <h4>Best Teachers</h4>
+                    <span class="fa fa-bars" aria-hidden="true"></span>
+                    <h4>Swimming Poll</h4>
                     <p>Phasellus at placerat ante nulla adipiscing elit</p>
                 </div>
             </div>
@@ -180,7 +201,7 @@
             <div class="col-xs-4 services-grids-w3l">
                 <div class="servi-shadow">
                     <span class="fa fa-laptop icon" aria-hidden="true"></span>
-                    <h4>Excellent Lab</h4>
+                    <h4>Canteen</h4>
                     <p>Phasellus at placerat ante nulla adipiscing elit</p>
                 </div>
             </div>
@@ -206,22 +227,22 @@
                 <div class="col-md-6 yaallahaa-news-left">
                     <div class="col-xs-6 news-left-img">
                         <div class="news-left-text color-event1">
-                            <h5>20 Dec</h5>
+                            <h5>April</h5>
                         </div>
                     </div>
                     <div class="col-xs-6 news-grid-info-bottom-w3ls">
                         <div class="news-left-top-text text-color1">
-                            <a href="#" data-toggle="modal" data-target="#myModal">Integer viverra eleifend neque</a>
+                            <a href="#" data-toggle="modal" data-target="#myModal">Year 5 - Camp</a>
                         </div>
                         <div class="date-grid">
                             <div class="admin">
                                 <a href="#">
-                                    <span class="fa fa-clock-o" aria-hidden="true"></span> 7:00 pm - 9:00 pm
+                                    <span class="fa fa-clock-o" aria-hidden="true"></span> 3rd - 5th April
                                 </a>
                             </div>
                             <div class="time">
                                 <p>
-                                    <span class="fa fa-map-marker" aria-hidden="true"></span> Newyork City, 2589
+                                    <span class="fa fa-map-marker" aria-hidden="true"></span> Waiora, NZ
                                 </p>
                             </div>
                             <div class="clearfix"> </div>
@@ -235,22 +256,22 @@
                 <div class="col-md-6 yaallahaa-news-left">
                     <div class="col-xs-6 news-left-img news-left-img1">
                         <div class="news-left-text color-event2">
-                            <h5>27 Dec</h5>
+                            <h5>July</h5>
                         </div>
                     </div>
                     <div class="col-xs-6 news-grid-info-bottom-w3ls">
                         <div class="news-left-top-text text-color2">
-                            <a href="#" data-toggle="modal" data-target="#myModal">Integer viverra eleifend neque</a>
+                            <a href="#" data-toggle="modal" data-target="#myModal">Year 4 - Camp </a>
                         </div>
                         <div class="date-grid">
                             <div class="admin">
                                 <a href="#">
-                                    <span class="fa fa-clock-o" aria-hidden="true"></span> 6:00 am - 8:00 am
+                                    <span class="fa fa-clock-o" aria-hidden="true"></span> 31st July - 2nd August
                                 </a>
                             </div>
                             <div class="time">
                                 <p>
-                                    <span class="fa fa-map-marker" aria-hidden="true"></span> Newyork City, 1452
+                                    <span class="fa fa-map-marker" aria-hidden="true"></span> Berwick, NZ
                                 </p>
                             </div>
                             <div class="clearfix"> </div>
@@ -267,22 +288,23 @@
                 <div class="col-md-6 yaallahaa-news-left">
                     <div class="col-xs-6 news-left-img news-left-img2">
                         <div class="news-left-text color-event3">
-                            <h5>28 Dec</h5>
+                            <h5>September</h5>
                         </div>
                     </div>
                     <div class="col-xs-6 news-grid-info-bottom-w3ls">
                         <div class="news-left-top-text text-color3">
-                            <a href="#" data-toggle="modal" data-target="#myModal">Integer viverra eleifend neque</a>
+                            <a href="#" data-toggle="modal" data-target="#myModal">Year 2 - Camp</a>
                         </div>
                         <div class="date-grid">
                             <div class="admin">
                                 <a href="#">
-                                    <span class="fa fa-clock-o" aria-hidden="true"></span> 10:00 am - 1:00 pm
+                                    <span class="fa fa-clock-o" aria-hidden="true"></span> 12th - 13th Ruma Tui <br />
+                                    <span class="fa fa-clock-o" aria-hidden="true"></span> 19th - 20th Ruma Moa
                                 </a>
                             </div>
                             <div class="time">
                                 <p>
-                                    <span class="fa fa-map-marker" aria-hidden="true"></span> Newyork City, 7458
+                                    <span class="fa fa-map-marker" aria-hidden="true"></span> Otago Museum, NZ
                                 </p>
                             </div>
                             <div class="clearfix"> </div>
@@ -296,22 +318,22 @@
                 <div class="col-md-6 yaallahaa-news-left">
                     <div class="col-xs-6 news-left-img news-left-img3">
                         <div class="news-left-text color-event4">
-                            <h5>30 Dec</h5>
+                            <h5>November</h5>
                         </div>
                     </div>
                     <div class="col-xs-6 news-grid-info-bottom-w3ls">
                         <div class="news-left-top-text text-color4">
-                            <a href="#" data-toggle="modal" data-target="#myModal">Integer viverra eleifend neque</a>
+                            <a href="#" data-toggle="modal" data-target="#myModal">Year 3 - Camp</a>
                         </div>
                         <div class="date-grid">
                             <div class="admin">
                                 <a href="#">
-                                    <span class="fa fa-clock-o" aria-hidden="true"></span> 7:00 pm - 9:00 pm
+                                    <span class="fa fa-clock-o" aria-hidden="true"></span> 21st - 22nd Nov
                                 </a>
                             </div>
                             <div class="time">
                                 <p>
-                                    <span class="fa fa-map-marker" aria-hidden="true"></span> Newyork City, 786.
+                                    <span class="fa fa-map-marker" aria-hidden="true"></span> Waikouaiti, NZ
                                 </p>
                             </div>
                             <div class="clearfix"> </div>
