--- a/Carisbrook/Views/Home/MenuSection.cshtml
+++ b/Carisbrook/Views/Home/MenuSection.cshtml
@@ -24,10 +24,10 @@
                 <a href="@Url.Action("OurSchool", "Home",new {id=2  })">School Staff</a>
             </li>
             <li>
-                <a href="@Url.Action("OurSchool", "Home",new {id=3  })">Board Of Trust</a>
+                <a href="@Url.Action("OurSchool", "Home",new {id=3  })">Board of Trustees</a>
             </li>
             <li>
-                <a href="@Url.Action("OurSchool", "Home",new {id=4  })">Friend Of School </a>
+                <a href="@Url.Action("OurSchool", "Home",new {id=4  })">Friends of School </a>
             </li>
             <li>
                 <a href="@Url.Action("OurSchool", "Home",new {id=5  })">Our Supporter </a>
@@ -57,8 +57,8 @@
     </li>
     <li class="dropdown" id="dvExtra">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            Extra CurriCulumn
-            <span class="caret"></span>
+            Extra <span class="caret"></span> Curriculumn
+            
         </a>
 
         <ul class="dropdown-menu" role="menu">
@@ -72,7 +72,7 @@
                 <a href="@Url.Action("OurSchool", "Home",new {id=13 })">Camps</a>
             </li>
             <li>
-                <a href="@Url.Action("OurSchool", "Home",new {id=14 })">Extra Activities</a>
+                <a href="@Url.Action("OurSchool", "Home",new {id=14 })">Extra Curriculum</a>
             </li>
         </ul>
     </li>
