--- a/Carisbrook/Views/Shared/_Layout.cshtml
+++ b/Carisbrook/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG,
             window.scrollTo(0, 1);
         }
     </script>
+   
     <!-- //meta-tags -->
     <link href="~/Assets/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="~/Assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
@@ -159,7 +160,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG,
                 <div class="allah-copy">
                     <p>
                         Copyright © 2018 Carisbrook School |
-                        Web Development by <a href="#" style="color:white">ravindermadra</a>
+                        Web Development by <a href="http//www.ravinderkmadra.com" style="color:white">ravindermadra</a>
                     </p>
                 </div>
                 <div class="footercopy-social">
